--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,40 @@
-#root {
-  max-width: 1280px;
+.wrapper{
+  width: 50%;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.input{
+  width: 250px;
+  margin: 10px auto;
+  border: 1px solid grey;
+  border-radius: 5px;
+  height: 30px;
+  padding: 2px 12px 2px 12px;
+  outline: 0;
+  background-color: #f5f5f5;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.listBoxContainer{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 250px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.listBoxItem{
+  background-color: black;
+  color: white;
+  padding: 10px;
+  border-bottom: 1px solid white;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.activeItem{
+  background-color: #d4cdcd;
+  color: black;
 }
